[gd_scene load_steps=24 format=3 uid="uid://dhsd6cxjrxhtj"]

[ext_resource type="Script" uid="uid://ny1bt2vvnakm" path="res://entities/enemies/ant_enemy/ant_enemy.gd" id="1_cs3af"]
[ext_resource type="Texture2D" uid="uid://bjaponm0sgvs8" path="res://assets/enemies/ant_anims1.png" id="2_v46lh"]
[ext_resource type="Script" uid="uid://drc32dbyt45eh" path="res://entities/enemies/states/state_machine.gd" id="3_7ggom"]
[ext_resource type="Script" uid="uid://8jg436ppnko" path="res://entities/enemies/states/idle_state.gd" id="4_rnb2k"]
[ext_resource type="Script" uid="uid://7spdl75ena5l" path="res://entities/enemies/states/chase_state.gd" id="5_wcsyl"]
[ext_resource type="Script" uid="uid://dm4uiijfbbr7u" path="res://entities/enemies/states/stun_state.gd" id="6_4ldpi"]
[ext_resource type="Script" uid="uid://cji0ts0qst0sl" path="res://entities/enemies/states/attack_state.gd" id="7_m6hkk"]
[ext_resource type="Script" uid="uid://c7yfvis6uphlt" path="res://entities/enemies/states/death_state.gd" id="8_uerhd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_th8so"]
atlas = ExtResource("2_v46lh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0j67"]
atlas = ExtResource("2_v46lh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vswb1"]
atlas = ExtResource("2_v46lh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg2q1"]
atlas = ExtResource("2_v46lh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq56i"]
atlas = ExtResource("2_v46lh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_it3go"]
atlas = ExtResource("2_v46lh")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8cdq"]
atlas = ExtResource("2_v46lh")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33y1n"]
atlas = ExtResource("2_v46lh")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2dbg"]
atlas = ExtResource("2_v46lh")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwlau"]
atlas = ExtResource("2_v46lh")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8geyk"]
atlas = ExtResource("2_v46lh")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wec8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th8so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0j67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vswb1")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg2q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq56i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it3go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8cdq")
}],
"loop": true,
"name": &"chase",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33y1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2dbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwlau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8geyk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rnb2k"]
radius = 3.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uerhd"]
radius = 6.68748
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m6hkk"]
radius = 7.0
height = 22.0

[node name="Ant Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_cs3af")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_wec8x")
animation = &"attack"
autoplay = "chase"
frame = 2
frame_progress = 1.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="NavTimer" type="Timer" parent="."]
autostart = true

[node name="WallCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rnb2k")

[node name="AttackBox" type="Area2D" parent="."]
position = Vector2(-7, -8)
collision_layer = 2
collision_mask = 4

[node name="AttackCollisionArea" type="CollisionShape2D" parent="AttackBox"]
shape = SubResource("CapsuleShape2D_uerhd")
disabled = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -11)
collision_layer = 2
collision_mask = 6

[node name="HitCollisionArea" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_m6hkk")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_7ggom")
initial_state = NodePath("Chase State")

[node name="Idle State" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_rnb2k")
enemy = NodePath("../..")

[node name="Chase State" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_wcsyl")
enemy = NodePath("../..")

[node name="Stun State" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_4ldpi")
enemy = NodePath("../..")

[node name="Attack State" type="Node" parent="State Machine"]
script = ExtResource("7_m6hkk")

[node name="Death State" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_uerhd")
enemy = NodePath("../..")

[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="body_exited" from="AttackBox" to="." method="_on_attack_box_body_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
